fix aligned card width

--- a/modules/card/main/index.scss
+++ b/modules/card/main/index.scss
@@ -129,7 +129,7 @@
 
 .hx-card-aligned > .hx-card-group > .hx-card-section {
   display: table-cell;
-  width: 100%;
+  width: auto;
 }
 
 .hx-card-aligned > .hx-card-group > .hx-card-section.hx-card-fixed {
